--- a/index.html
+++ b/index.html
@@ -1,7 +1,187 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+<title>Change to your title</title>
+<meta charset="utf-8">
+<link rel="stylesheet" href="mainwebstyles.css">
+<meta name="robots" content="noindex, no follow, noarchive" />
+<meta name="author" content="add yournamehere" />
+</head>
 <body>
-<h1>Judith Murillo</h1>
-<p>Happy to be a part of class</p>
+<div id="wrapper">
+<header>
+  <h1>Web Design/Development Course Projects Web Site
+    </h1>
+</header>
+<nav>
+<ul>
+  <li>Spring<br>2018<br>Courses</li><br>
+  <li><a href="1510/index.html">1510</a></li><br>
+  <li><a href="1520/index.html">1520</a></li><br>
+  <li><a href="1530/index.html">1530</a></li><br>
+  <li><a href="1550/index.html">1550</a></li><br>
+  <li><a href="1560/index.html">1560</a></li><br>
+  <li><a href="2351/index.html">2351</a></li><br>
+  <li><a href="2510/index.html">2510</a></li><br>
+  <li><a href="2531/index.html">2531</a></li><br>
+  <li><a href="2550/index.html">2550</a></li><br>
+  <li><a href="2950/index.html">2950</a></li>
+</ul>
+</nav>
+<main>
+<h2>Johnny Cache-Change to your name</h2>
+<img src="yourphoto.jpg" alt="yourdescription" width="320">
+<p><span class="resort">This semester I am enrolled in the following courses:</p>
+<ul>
+  <li>FYES1000</li>
+  <li>CIST1001</li>
+  <li>CIST1305</li>
+  <li>CIST1510</li>
+</ul>
+  <div class="clear">I am in the:<br>
+        Web Design/Development: Degree Program<br>
+        Networking: Degree Program
+  <br>
+  <br>
+  <br>
+  </div>
+</main>
+<footer>Copyright © 2018 Computer Science Department Web Design/Development Program<br>
+</footer>
+</div>
 </body>
+</html>
+
+ 
+Main Web Site CSS -  http://www.yourdomain.info/mainwebstyles.css
+body { background-color:#f4ffe4;
+      background-image: url(background.jpg);
+      color: #000000;
+      font-family: Verdana, Arial, sans-serif;
+}
+#wrapper { width: 80%;
+           min-width: 700px;
+           max-width: 1024px;
+           margin-right: auto;
+           margin-left: auto;
+           background-color:#55aa55;
+           box-shadow: 3px 3px 3px #666666;
+}
+header { background-color: #116611;
+         color: #ffffff;
+       font-family: Georgia, serif;
+}
+h1 { line-height: 200%;
+        text-align: center;
+    background-repeat: no-repeat;
+    background-position: right;
+    padding-left: 20px;
+    height: 72px;
+    margin-bottom: 0;
+background-color:#116611;
+color:#ffffff;
+}
+nav { font-weight: bold;
+     padding: 5px;
+     float:left;
+     width: 160px;
+     padding: 20px 5px 0 20px;
+}
+nav a { text-decoration: none; }
+nav a:link { color: #000033; }
+nav a:visited { color: #344873 }
+nav a:hover { color: #FFFFFF; }
+nav ul { list-style-type: none;
+       margin: 0;
+       padding-left: 0;
+}
+h2 { color: #000000;
+    font-family: Georgia, serif;
+}
+dt { color: #000000;
+    font-weight: bold;
+}
+.resort { color: #000000;
+          font-size: 1.2em;
+}
+footer { font-size: 0.70em;
+       text-align: center;
+       font-style: italic;
+       padding: 10px;
+       margin-left: 170px;
+       background-color: #FFFFFF;
+}
+h3 { color: #000000;
+}
+main { padding-left: 20px;
+        padding-right: 20px;
+        background-color: #FFFFFF;
+        margin-left: 170px;
+        padding-top: 1px;
+        padding-bottom: 1px;
+}
+main img { float: left;
+           padding-right: 20px;
+           padding-bottom: 20px;
+}
+main ul { list-style-position: inside; }
+.clear { clear: both; }
+header, nav, main, footer { display: block; }
+
+
+1510 Main index page -  http://www.yourdomain.info/1510/index.html
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Change to Your title here</title>
+<style type="text/css">
+   body {background-color:#66ccff;}
+   div {text-align: center;}
+   a:link { color:#0000ff;}
+   a:hover {color:#ff0000; background-color:#ffffff;}
+   h1 {color:#cc0066;}
+   table {border-radius: 20px; background-color: #33ffff;}
+   #wrapper {margin-left: auto; margin-right: auto;}
+</style>
+      <meta name="robots" content="noindex, no follow, noarchive" />
+      <meta name="author" content="add yournamehere" />
+    </head>
+    <body>          
+       <div>        
+        <img src="yourimagename.jpg" alt="your photo description here">
+        <h1>CIST 1510 Web Development I</h1>
+        <h2>Your Name Here</h2><br>
+        <h2>Spring 2018</h2>
+        <table cellspacing="10" cellpadding="5" border="2" id="wrapper">
+            <tbody>
+                <tr>
+                    <td><a href="ch02/index.html">Chapter 2</a></td>
+                    <td><a href="ch03/index.html">Chapter 3</a></td>
+                    <td><a href="ch04/index.html">Chapter 4</a></td>
+                </tr>
+                <tr>
+
+                    <td><a href="ch06/index.html">Chapter 6</a></td>
+                    <td><a href="ch07/index.html">Chapter 7</a></td>
+                    <td><a href="ch08/index.html">Chapter 8</a></td>
+                </tr>
+                <tr>
+                    <td><a href="ch09/index.html">Chapter 9</a></td>
+                    <td><a href="ch11/index.html">Chapter 11</a></td>
+                    <td><a href="ch12/index.html">Chapter 12</a></td>
+                </tr>
+                <tr>
+                    <td><a href="ch13/index.html">Chapter 13</a></td>
+                    <td><a href="ch14/index.html">Chapter 14</a></td>
+                     <td><a href="midterm/index.html">Midterm Project</a></td>
+                </tr>
+                <tr>
+                    <td><a href="final/index.html">Final Project</a></td>
+                    <td><a href="extra/tables.html">Tables Project</a></td>
+                    <td><a href="extra/map.html">Image Map Project</a></td>
+                </tr>
+            </tbody>
+        </table>
+        </div>
+    </body>
 </html>
