--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Change to your title</title>
 <meta charset="utf-8">
-<link rel="stylesheet" href="mainwebstyles.css">
+<link rel="stylesheet" href="mainwebsitestyles.css">
 <meta name="robots" content="noindex, no follow, noarchive" />
 <meta name="author" content="add yournamehere" />
 </head>
